submission for deadline

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <img id="fg-image" src="./assets/image-placeholder.jpg" class="image" />
         <div class="likes-section">
           <button id="like-button" class="like-button">👍</button>
-          <span id="fg-likes" class="likes">X Likes</span>
+          <span id="fg-likes" class="likes">0 Likes</span>
         </div>
         <ul id="fg-comments" class="comments">
-          <li>This is a fake thing</li>
-          <li>Replace us all with real things</li>
-          <li>Release us from this deception</li>
+          <li></li>
+          <li></li>
+          <li></li>
         </ul>
         <form id="comment-form" class="comment-form">
           <input
